--- a/paper/sources.bib
+++ b/paper/sources.bib
@@ -7,6 +7,21 @@
     year=2002
 }
 
+@InProceedings{hybrid_logic,
+  author="From, Asta Halkj{\ae}r
+  and Blackburn, Patrick
+  and Villadsen, J{\o}rgen",
+  editor="Peltier, Nicolas
+  and Sofronie-Stokkermans, Viorica",
+  title="Formalizing a Seligman-Style Tableau System for Hybrid Logic",
+  booktitle="Automated Reasoning",
+  year="2020",
+  publisher="Springer International Publishing",
+  address="Cham",
+  pages="474--481",
+  isbn="978-3-030-51074-9"
+}
+
 @article{hybrid_logic_afp,
   author  = {Asta Halkjær From},
   title   = {Formalizing a Seligman-Style Tableau System for Hybrid Logic},
@@ -67,7 +82,7 @@
   type = {Diploma thesis}
 }
 
-@article{zfc_in_hol,
+@article{zfc_in_hol2,
   author    = {Lawrence C. Paulson},
   title     = {Wetzel: Formalisation of an Undecidable Problem Linked to the Continuum
                Hypothesis},
@@ -82,6 +97,19 @@
   biburl    = {https://dblp.org/rec/journals/corr/abs-2205-03159.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{zfc_in_hol1,
+  author = {Mirna Džamonja and Angeliki Koutsoukou-Argyraki and Lawrence C. Paulson},
+  title = {Formalizing Ordinal Partition Relations Using Isabelle/HOL},
+  journal = {Experimental Mathematics},
+  volume = {31},
+  number = {2},
+  pages = {383-400},
+  year  = {2022},
+  publisher = {Taylor & Francis},
+  doi = {10.1080/10586458.2021.1980464},
+}
+
 
 @article{zfc_in_hol_afp,
   author  = {Lawrence C. Paulson},
@@ -104,3 +132,27 @@
             Formal proof development},
   ISSN    = {2150-914x},
 }
+
+@InProceedings{lqe,
+  author={Nipkow, Tobias},
+  editor={Armando, Alessandro and Baumgartner, Peter and Dowek, Gilles},
+  title={Linear Quantifier Elimination},
+  booktitle={{Automated Reasoning}},
+  year=2008,
+  publisher={{Springer Berlin Heidelberg}},
+  pages="18--33",
+} 
+
+@book{tableau,
+  author="Fitting, Melvin",
+  title="Semantic Tableaux and Resolution",
+  bookTitle="First-Order Logic and Automated Theorem Proving",
+  year="1996",
+  publisher="Springer New York",
+  address="New York, NY",
+  isbn="978-1-4612-2360-3",
+  doi="10.1007/978-1-4612-2360-3_3",
+  url="https://doi.org/10.1007/978-1-4612-2360-3_3"
+}
+
+
